Complete Array Cardio Day 2

--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,22 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const oneOlder19 = people.some((item) => item.year < 2006)
+    
     // Array.prototype.every() // is everyone 19 or older?
+    const everyOneOlder19 = people.every((item) => 2025 - item.year >=19)
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const commentById = comments.find(item => item.id == 823423)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    comments.splice(comments.findIndex((item) => item.text == 'Love this!'), 1)
+    console.log(comments);
+    
 
   </script>
 </body>
